--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tecnologia e Inclusão Digital</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+  <div class="topo">
+    <h1 class="logo">IncludTech</h1>
+
+    <!-- MENU -->
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="historia.html">Conceitos</a>
+      <a href="galeria.html">Contato</a>
+    </nav>
+  </div>
+
+  <!-- CONTEÚDO PRINCIPAL -->
+  <div class="principal">
+
+    <!-- Primeira parte -->
+    <div class="caixa inicio">
+      <div class="texto">
+        <h2>Inclusão Digital</h2>
+        <p>
+          Inclusão digital é garantir que todas as pessoas tenham acesso
+          à internet, a dispositivos e saibam usar a tecnologia.
+        </p>
+      </div>
+      <div class="imagem">
+        <img src="img/banner.jpg" alt="Estudantes usando computadores">
+      </div>
+    </div>
+
+    <!-- Segunda parte -->
+    <div class="caixa sobre">
+      <h2>O que você vai encontrar</h2>
+      <div class="bloco">
+        <h3>Conceitos</h3>
+        <p>Explicações básicas sobre inclusão digital.</p>
+      </div>
+      <div class="bloco">
+        <h3>História</h3>
+        <p>Um resumo de como a tecnologia evoluiu.</p>
+      </div>
+      <div class="bloco">
+        <h3>Galeria</h3>
+        <p>Espaço para imagens e contato.</p>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- RODAPÉ -->
+  <div class="rodape">
+    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Nome do Aluno</strong></p>
+  </div>
+
+</body>
+</html>
