--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,64 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnologia e Inclusão Digital</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Início - Cultura Indígena</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <div class="topo">
-    <h1 class="logo">IncludTech</h1>
-
-    <!-- MENU -->
+  <header class="topo">
+    <h1 class="logo">Cultura Indígena</h1>
     <nav class="menu">
       <a href="index.html">Início</a>
-      <a href="historia.html">Conceitos</a>
-      <a href="galeria.html">Contato</a>
+      <a href="historia.html">História</a>
+      <a href="galeria.html">Galeria</a>
     </nav>
-  </div>
+  </header>
 
-  <!-- CONTEÚDO PRINCIPAL -->
-  <div class="principal">
+  <main class="principal">
 
-    <!-- Primeira parte -->
+    <!-- Apresentação -->
     <div class="caixa inicio">
       <div class="texto">
-        <h2>Inclusão Digital</h2>
+        <h2>Bem-vindos!</h2>
         <p>
-          Inclusão digital é garantir que todas as pessoas tenham acesso
-          à internet, a dispositivos e saibam usar a tecnologia.
+          Este site foi criado no projeto de Programação para apresentar a
+          <strong>cultura indígena</strong> no Brasil e refletir sobre
+          <strong>desigualdades e preconceitos</strong> que ainda afetam
+          diferentes povos originários.
+        </p>
+        <p>
+          O Brasil é casa de centenas de povos indígenas, com línguas, saberes,
+          artes, modos de vida e formas de organização muito diversos. Valorizar
+          essa pluralidade é reconhecer a história e o presente desses povos.
         </p>
       </div>
       <div class="imagem">
-        <img src="img/banner.jpg" alt="Estudantes usando computadores">
+        <img src="img/banner.jpg" alt="Arte e símbolos de povos indígenas do Brasil">
       </div>
     </div>
 
-    <!-- Segunda parte -->
-    <div class="caixa sobre">
-      <h2>O que você vai encontrar</h2>
-      <div class="bloco">
-        <h3>Conceitos</h3>
-        <p>Explicações básicas sobre inclusão digital.</p>
-      </div>
-      <div class="bloco">
-        <h3>História</h3>
-        <p>Um resumo de como a tecnologia evoluiu.</p>
-      </div>
-      <div class="bloco">
-        <h3>Galeria</h3>
-        <p>Espaço para imagens e contato.</p>
+    <!-- Cultura e respeito -->
+    <div class="caixa destaque">
+      <div class="texto">
+        <h2>Cultura, Línguas e Saberes</h2>
+        <p>
+          A cultura indígena envolve conhecimentos sobre a natureza, a saúde, a
+          agricultura, a arte, a música, as danças e as narrativas orais. Muitas
+          comunidades mantêm <strong>línguas próprias</strong> e práticas
+          tradicionais que ensinam respeito ao território e ao coletivo.
+        </p>
+        <p>
+          Aprender sobre esses saberes é uma forma de combater estereótipos e
+          reconhecer contribuições fundamentais para a ciência, para a
+          biodiversidade e para a história do nosso país.
+        </p>
       </div>
     </div>
 
-  </div>
+    <!-- Desigualdade e preconceito -->
+    <div class="caixa importancia">
+      <div class="texto">
+        <h2>Desigualdade e Preconceito</h2>
+        <p>
+          Apesar das riquezas culturais, muitos povos enfrentam <strong>desigualdades</strong>
+          no acesso a direitos básicos: educação, saúde, moradia, proteção de
+          seus territórios e oportunidade de participação social.
+        </p>
+        <p>
+          O <strong>preconceito</strong> aparece em estereótipos, invisibilização
+          na mídia e desrespeito às tradições. Combater isso começa na escola:
+          conhecer, ouvir e valorizar as vozes indígenas é essencial para uma
+          sociedade mais justa.
+        </p>
+        <p>
+          Nosso objetivo aqui é aprender com respeito, apresentar informações de
+          fontes confiáveis e incentivar atitudes que promovam dignidade,
+          diversidade e diálogo.
+        </p>
+      </div>
+    </div>
+
+  </main>
 
   <!-- RODAPÉ -->
-  <div class="rodape">
+  <footer class="rodape">
     <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Nome do Aluno</strong></p>
-  </div>
+  </footer>
 
 </body>
 </html>
