--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -36,7 +36,7 @@
         </p>
       </div>
       <div class="imagem">
-        <img src="img/banner.jpg" alt="Arte e símbolos de povos indígenas do Brasil">
+        <img src="IMAGEM/indigena1.jpg" alt="índios de mãos dadas">
       </div>
     </div>
 
