--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -85,7 +85,7 @@
 
   <!-- RODAPÉ -->
   <footer class="rodape">
-    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Nome do Aluno</strong></p>
+    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Profª Nane</strong></p>
   </footer>
 
 </body>
