--- a/galeria.html
+++ b/galeria.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Galeria - Cultura Indígena</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <!-- TOPO -->
+  <header class="topo">
+    <h1 class="logo">Cultura Indígena</h1>
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="historia.html">História</a>
+      <a href="galeria.html">Galeria</a>
+    </nav>
+  </header>
+
+  <!-- CONTEÚDO PRINCIPAL -->
+  <main class="principal">
+
+    <!-- Texto de introdução -->
+    <div class="caixa introducao">
+      <div class="texto">
+        <h2>Galeria de Cultura Indígena</h2>
+        <p>
+          A cultura indígena no Brasil é representada em diversos aspectos:
+          grafismos, pinturas, objetos do cotidiano, festas, rituais, arte e
+          relação com a natureza.
+        </p>
+        <p>
+          Esta galeria reúne algumas imagens simbólicas para valorizar a
+          diversidade e a riqueza dos povos indígenas. As imagens podem ser
+          trocadas por fotos de fontes confiáveis ou desenhos feitos pelos
+          próprios alunos.
+        </p>
+      </div>
+    </div>
+
+    <!-- Galeria de imagens -->
+    <div class="caixa galeria">
+      <div class="imagens-galeria">
+        <img src="IMAGEM/indigena2.jpg" alt="Arte indígena em grafismo colorido">
+        <img src="IMAGEM/indigena3.jpg" alt="Cerâmica produzida por comunidade indígena">
+        <img src="IMAGEM/indigena4.jpeg" alt="Crianças indígenas brincando">
+        <img src="IMAGEM/indigena5.jpeg" alt="Festa tradicional com dança e música">
+        <img src="img/arte5.jpg" alt="Pintura corporal indígena">
+        <img src="img/arte6.jpg" alt="Cesta artesanal indígena">
+      </div>
+    </div>
+
+  </main>
+
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Nome do Aluno</strong></p>
+  </footer>
+
+</body>
+</html>
 
