--- a/galeria.html
+++ b/galeria.html
@@ -41,12 +41,12 @@
     <!-- Galeria de imagens -->
     <div class="caixa galeria">
       <div class="imagens-galeria">
-        <img src="IMAGEM/indigena2.jpg" alt="Arte indígena em grafismo colorido">
-        <img src="IMAGEM/indigena3.jpg" alt="Cerâmica produzida por comunidade indígena">
-        <img src="IMAGEM/indigena4.jpeg" alt="Crianças indígenas brincando">
-        <img src="IMAGEM/indigena5.jpeg" alt="Festa tradicional com dança e música">
-        <img src="img/arte5.jpg" alt="Pintura corporal indígena">
-        <img src="img/arte6.jpg" alt="Cesta artesanal indígena">
+        <img src="IMAGEM/indigena2.jpg" alt="Índias sentadas com suas roupas tradicionais">
+        <img src="IMAGEM/indigena3.jpg" alt="Índios usando computador">
+        <img src="IMAGEM/indigena4.jpeg" alt="Índios dançando e segurando a bandeira do Brasil">
+        <img src="IMAGEM/indigena5.jpeg" alt="Índia idosa aprendendo a usar o computador">
+        <img src="IMAGEM/indigena6.jpg" alt="Imagem demonstrando a cultura indigena">
+        <img src="IMAGEM/indigena7.jpeg" alt="Imagem demonstrando a cultura indigena">
       </div>
     </div>
 
@@ -54,7 +54,7 @@
 
   <!-- RODAPÉ -->
   <footer class="rodape">
-    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Nome do Aluno</strong></p>
+    <p>&copy; 2025 — Projeto escolar. Feito por: <b>Nane</b></p>
   </footer>
 
 </body>
