--- a/galeria.html
+++ b/galeria.html
@@ -54,7 +54,7 @@
 
   <!-- RODAPÉ -->
   <footer class="rodape">
-    <p>&copy; 2025 — Projeto escolar. Feito por: <b>Nane</b></p>
+    <p>&copy; 2025 — Projeto escolar. Feito por: <b>Prof.ª Nane</b></p>
   </footer>
 
 </body>
