--- a/historia.html
+++ b/historia.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>História - Cultura Indígena</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+  <!-- TOPO -->
+  <header class="topo">
+    <h1 class="logo">Cultura Indígena</h1>
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="historia.html">História</a>
+      <a href="galeria.html">Galeria</a>
+    </nav>
+  </header>
+
+  <!-- CONTEÚDO PRINCIPAL -->
+  <main class="principal">
+
+    <!-- Introdução -->
+    <div class="caixa introducao">
+      <div class="texto">
+        <h2>A História dos Povos Indígenas no Brasil</h2>
+        <p>
+          A presença indígena no território brasileiro existe muito antes da
+          chegada dos europeus. Estima-se que havia entre 3 e 5 milhões de
+          indígenas vivendo aqui, divididos em centenas de povos com culturas,
+          tradições e línguas próprias.
+        </p>
+        <p>
+          Esses povos já tinham formas organizadas de sociedade, agricultura,
+          arte e espiritualidade. Viviam em harmonia com a natureza, respeitando
+          o meio ambiente e transmitindo o conhecimento de geração em geração.
+        </p>
+      </div>
+    </div>
+
+    <!-- Período da colonização -->
+    <div class="caixa colonizacao">
+      <div class="texto">
+        <h2>Colonização e Resistência</h2>
+        <p>
+          Com a chegada dos colonizadores portugueses em 1500, os povos indígenas
+          passaram por um processo de exploração, escravização e perda de seus
+          territórios. Muitos foram obrigados a abandonar suas terras e modos de
+          vida, e outros resistiram bravamente.
+        </p>
+        <p>
+          Ao longo da história, a resistência indígena se manteve viva por meio
+          da preservação da língua, da cultura e da luta pelos direitos. Mesmo
+          diante de perseguições, os povos originários nunca deixaram de lutar
+          pela defesa de sua identidade e de suas terras.
+        </p>
+      </div>
+    </div>
+
+    <!-- Direitos e reconhecimento -->
+    <div class="caixa direitos">
+      <div class="texto">
+        <h2>Direitos e Reconhecimento</h2>
+        <p>
+          A Constituição Brasileira de 1988 foi um marco importante, pois
+          reconheceu os indígenas como os primeiros habitantes do país e
+          garantiu o direito à terra, à cultura e à educação diferenciada.
+        </p>
+        <p>
+          Apesar dos avanços legais, ainda existem desafios. Muitas comunidades
+          enfrentam invasões em seus territórios, falta de acesso à saúde e
+          educação, e preconceito na sociedade. É essencial que todos conheçam
+          essa história para construir um Brasil mais justo e igualitário.
+        </p>
+      </div>
+    </div>
+
+    <!-- Valorização -->
+    <div class="caixa valorizacao">
+      <div class="texto">
+        <h2>Valorizando a Cultura e o Conhecimento</h2>
+        <p>
+          Valorizar a cultura indígena é reconhecer sua importância na formação
+          da identidade brasileira. As tradições, os saberes sobre a natureza,
+          as danças, as pinturas e a arte são parte do nosso patrimônio.
+        </p>
+        <p>
+          A escola tem um papel fundamental nesse processo. Estudar os povos
+          indígenas não é olhar apenas para o passado, mas entender que eles
+          continuam presentes, contribuindo para o futuro do nosso país.
+        </p>
+      </div>
+    </div>
+
+  </main>
+
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Nome do Aluno</strong></p>
+  </footer>
+
+</body>
+</html>
