--- a/galeria.html
+++ b/galeria.html
@@ -44,9 +44,10 @@
         <img src="IMAGEM/indigena2.jpg" alt="Índias sentadas com suas roupas tradicionais">
         <img src="IMAGEM/indigena3.jpg" alt="Índios usando computador">
         <img src="IMAGEM/indigena4.jpeg" alt="Índios dançando e segurando a bandeira do Brasil">
-        <img src="IMAGEM/indigena5.jpeg" alt="Índia idosa aprendendo a usar o computador">
+        <img src="IMAGEM/indigena5.png" alt="Índia idosa aprendendo a usar o computador">
         <img src="IMAGEM/indigena6.jpg" alt="Imagem demonstrando a cultura indigena">
         <img src="IMAGEM/indigena7.jpeg" alt="Imagem demonstrando a cultura indigena">
+        <img src="IMAGEM/indigena8.jpg" alt="Comemoração ao dia do índio">
       </div>
     </div>
 
